--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
 <h1>Game Fan Manager Welcomes You</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+<%= link_to "Register Developer", new_developer_path, class: "btn btn-primary" %> <br>
+<%= link_to "Index Developers", developers_path, class: "btn btn-primary" %> <br>
+<%= link_to "Index Games", games_path, class: "btn btn-primary" %> <br>
+<br>
+<%= link_to "Game Fans Vote Here!", new_fan_path, class: "btn btn-primary" %> <br>
