--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Game#index</h1>
-<p>Find me in app/views/game/index.html.erb</p>
+<h1>Games Index</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td><strong>Title</strong></td>
+      <td><strong>Genre</strong></td>
+      <td><strong>Price</strong></td>
+      <td><strong>Developer</strong></td>
+    </tr>
+    <% @games.each do |games| %>
+      <tr>
+        <td><%= games.title %></td>
+        <td><%= games.genre %></td>
+        <td><%= games.price %></td>
+        <td><%= games.developer.name %></td>
+        <% end %>
+      </tr>
+  </tbody>
+</table>
