Add form partial for games

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,3 +1,2 @@
 <h1>Create a New Game for <%= @dev.name %></h1>
-<p>Find me in app/views/game/new.html.erb</p>
-<%# <%= render 'form' %> %>
+<%= render 'form' %>
