--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -17,6 +17,6 @@
     <%= f.text_field :price, class: "form-control" %></div>
 
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit "Create Game" %>
   </div>
 <% end %>
