--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,3 +5,4 @@
 <%= link_to "Index Games", games_path, class: "btn btn-primary" %> <br>
 <br>
 <%= link_to "Game Fans Vote Here!", new_fan_path, class: "btn btn-primary" %> <br>
+<%= link_to "Current Vote Tally", 'tally'%>
