Add home nav links

--- a/app/views/developers/new.html.erb
+++ b/app/views/developers/new.html.erb
@@ -1,3 +1,4 @@
-<h1>Developer#new</h1>
-<p>Find me in app/views/developer/new.html.erb</p>
+<h1>Developer Registration</h1>
 <%= render 'form' %>
+<br> <br>
+<%= link_to "Back to Home", '/' %>
