--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,5 +1,19 @@
 <%= form_for(@game) do |f| %>
 
+  <% if @game.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@game.errors.count, "error") %> prohibited this user from being saved:
+      </h2>
+
+      <ul>
+        <% @game.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: "form-control" %></div>
