Add dev login link to home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Game Fan Manager Welcomes You</h1>
-
+<%= link_to "Login Developer", '/login' %> <br>
 <%= link_to "Register Developer", new_developer_path, class: "btn btn-primary" %> <br>
 <%= link_to "Index Developers", developers_path, class: "btn btn-primary" %> <br>
 <%= link_to "Index Games", games_path, class: "btn btn-primary" %> <br>
