--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,3 +6,5 @@
 <br>
 <%= link_to "Game Fans Vote Here!", new_fan_path, class: "btn btn-primary" %> <br>
 <%= link_to "Current Vote Tally", 'tally'%>
+<br>
+<%= link_to "Log out Test", logout_path, method: :delete %>
