--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,3 +8,5 @@
 <%= link_to "Current Vote Tally", 'tally'%>
 <br>
 <%= link_to "Log out Test", logout_path, method: :delete %>
+<br>
+<%= link_to "Class Method Test", 'order'%>
