--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -2,7 +2,7 @@
   <% if @developer.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@developer.errors.count, "error") %> prohibited this user from being saved:
+        <%= pluralize(@developer.errors.count, "error") %> prohibited this Developer from being saved:
       </h2>
 
       <ul>
